tests-system/rbt-quantified-expression/output
(forall item in a => 42), warning "All items must be positive", a
                     ^^ rbt-quantified-expression/foo.rsl:10: error: expected expression of type Builtin_Boolean, got Builtin_Integer instead
Processed 1 model and 1 requirement file and found 1 error
